tests/sema/negative/duplicate_variable_same_scope.nv
fn main() : void {
    let x : int = 1;
    let x : int = 2;
    return;
}
